# Augment_coco_dataset_with_samples

./: .gitignore  CLAUDE.md  Makefile  README.md  REMEBER_TRANSPARANT_BACKGROUND_AND_SET_OUTPUT_NUMBER_PRED_FOR_DETR_IN_TRAIN  augment.py  main.py  pyproject.toml
delme/: _annotations.coco.json
